--- a/html/abrigos.html
+++ b/html/abrigos.html
@@ -76,7 +76,7 @@
                         <div class="foto-prenda">
                             <img  class="abrigos" src="../images/gabardina.jpg">	
                         </div>
-                        <p class="prenda">Abrigo pull and bear</p>
+                        <p class="prenda">GABARDINA EFECTO LAVADO</p>
 
                         <div class="inferior">
                             <div>
