--- a/html/abrigos-1.html
+++ b/html/abrigos-1.html
@@ -79,8 +79,11 @@
 				<section class="detalle">
 				<p class="titulo-producto">GABARDINA EFECTO LAVADO</p>
 				<p class="">⭐⭐⭐⭐</p>
+				<br><br>
 				<p class="detalle">Gabardina efecto lavado confeccionada en hilatura de algodón con cuello solapa y manga larga con trabillas, bolsillos de vivo, detalle de cinturón confeccionado en mismo tejido y cierre frontal con cruzado de botones.</p>
 				<p class="precio">$ 1000</p>
+				<br>
+				<button class="atras">Regresar</button>
 				</section>
                 <section>
                 </section>
