--- a/html/carrito.html
+++ b/html/carrito.html
@@ -4,10 +4,11 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
-	<link rel="stylesheet" href="style.css">
-	<script src="main.js" async></script>
-	<script src="app.js" defer type="module"></script>
-	<title>AdminSite</title>
+	<link rel="stylesheet" href="/admin-site/style.css">
+    <link rel="stylesheet" href="../css/carrito.css">
+	<script src="/admin-site/main.js" async></script>
+	<script src="/admin-site/app.js" defer type="module"></script>
+	<title>Abrigos</title>
 </head>
 <body>
 	<!-- SIDEBAR -->
@@ -19,7 +20,7 @@
 			<li>
 				<a href="#"><i class='bx bxs-inbox icon' ></i> Todos los productos <i class='bx bx-chevron-right icon-right' ></i></a>
 				<ul class="side-dropdown">
-					<li><a href="../html/abrigos.html" target="_blank">Abrigos</a></li>
+					<li><a href="#">Abrigos</a></li>
 					<li><a href="#">Camisas</a></li>
 					<li><a href="#">Pantalones</a></li>
 					<!--<li><a href="#">Button</a></li>-->
@@ -29,7 +30,7 @@
 			<li><a href="#"><i class='bx bxs-widget icon' ></i> Widgets</a></li>
 			<li class="divider" data-text="table and forms">Table and forms</li>-->
 			<br><br><br>
-			<li><a href="../html/carrito.html" target="_blank"><i class='bx bx-table icon' ></i> Carrito</a></li>
+			<li><a href="#"><i class='bx bx-table icon' ></i> Carrito</a></li>
 			<li>
 				<br><br><br><br>
 				<a href="#"><i class='bx  icon' ></i>©  2023 campus<i class='bx bx-chevron-right icon-right' ></i></a>
@@ -66,59 +67,16 @@
 		<!-- NAVBAR -->
 
 		<!-- MAIN -->
-		<main>
-			<h1 class="title">Dashboard</h1>
-			<ul class="breadcrumbs">
-				<li><a href="#">Home</a></li>
-				<li class="divider">/</li>
-				<li><a href="#" class="active">Dashboard</a></li>
-			</ul>
-			<div class="info-data">
-				<div class="card">
-					<div class="head">
-						<div>
-							<h2>1500</h2>
-							<p>Traffic</p>
-						</div>
-						<i class='bx bx-trending-up icon' ></i>
-					</div>
-					<span class="progress" data-value="40%"></span>
-					<span class="label">40%</span>
-				</div>
-				<div class="card">
-					<div class="head">
-						<div>
-							<h2>234</h2>
-							<p>Sales</p>
-						</div>
-						<i class='bx bx-trending-down icon down' ></i>
-					</div>
-					<span class="progress" data-value="60%"></span>
-					<span class="label">60%</span>
-				</div>
-				<div class="card">
-					<div class="head">
-						<div>
-							<h2>465</h2>
-							<p>Pageviews</p>
-						</div>
-						<i class='bx bx-trending-up icon' ></i>
-					</div>
-					<span class="progress" data-value="30%"></span>
-					<span class="label">30%</span>
-				</div>
-				<div class="card">
-					<div class="head">
-						<div>
-							<h2>235</h2>
-							<p>Visitors</p>
-						</div>
-						<i class='bx bx-trending-up icon' ></i>
-					</div>
-					<span class="progress" data-value="80%"></span>
-					<span class="label">80%</span>
-				</div>
-			</div>
+        <h1 class="title">CARRITO</h1>
+		<main class="pagina-carrito">
+            <div class="compras">
+
+
+
+
+                
+            </div>
+        </div>	 
 			<div class="data">
 				<div class="content-data">
 					<div class="head">
