--- a/html/abrigos.html
+++ b/html/abrigos.html
@@ -30,7 +30,7 @@
 			<li><a href="#"><i class='bx bxs-widget icon' ></i> Widgets</a></li>
 			<li class="divider" data-text="table and forms">Table and forms</li>-->
 			<br><br><br>
-			<li><a href="#"><i class='bx bx-table icon' ></i> Carrito</a></li>
+			<li><a href="carrito.html"><i class='bx bx-table icon' ></i> Carrito</a></li>
 			<li>
 				<br><br><br><br>
 				<a href="#"><i class='bx  icon' ></i>©  2023 campus<i class='bx bx-chevron-right icon-right' ></i></a>
