--- a/html/carrito.html
+++ b/html/carrito.html
@@ -20,7 +20,7 @@
 			<li>
 				<a href="#"><i class='bx bxs-inbox icon' ></i> Todos los productos <i class='bx bx-chevron-right icon-right' ></i></a>
 				<ul class="side-dropdown">
-					<li><a href="#">Abrigos</a></li>
+					<li><a href="abrigos.html">Abrigos</a></li>
 					<li><a href="#">Camisas</a></li>
 					<li><a href="#">Pantalones</a></li>
 					<!--<li><a href="#">Button</a></li>-->
@@ -30,7 +30,7 @@
 			<li><a href="#"><i class='bx bxs-widget icon' ></i> Widgets</a></li>
 			<li class="divider" data-text="table and forms">Table and forms</li>-->
 			<br><br><br>
-			<li><a href="#"><i class='bx bx-table icon' ></i> Carrito</a></li>
+			<li><a href="carrito.html"><i class='bx bx-table icon' ></i> Carrito</a></li>
 			<li>
 				<br><br><br><br>
 				<a href="#"><i class='bx  icon' ></i>©  2023 campus<i class='bx bx-chevron-right icon-right' ></i></a>
@@ -70,11 +70,20 @@
         <h1 class="title">CARRITO</h1>
 		<main class="pagina-carrito">
             <div class="compras">
-
-
-
-
-                
+                <section>foto</section>
+                <section>nomvbre</section>
+                <section>cantidad</section>
+                <section>precio</section>
+                <section>total</section>
+                <section>eliminar</section>
+            </div>
+            <div class="compras">
+                <section>foto</section>
+                <section>nomvbre</section>
+                <section>cantidad</section>
+                <section>precio</section>
+                <section>total</section>
+                <section>eliminar</section>
             </div>
         </div>	 
 			<div class="data">
