feat: :tada: filtro
f

--- a/html/abrigos.html
+++ b/html/abrigos.html
@@ -13,7 +13,7 @@
 <body>
 	<!-- SIDEBAR -->
 	<section id="sidebar">
-		<a href="#" class="brand"><i class='bx bxs-smile icon'></i> CampusShop</a>
+		<a href="../admin-site/index.html" class="brand"><i class='bx bxs-smile icon'></i> CampusShop</a>
 		<ul class="side-menu">
 			<li><a href="#" class="active"><i class='bx bxs-dashboard icon' ></i> Dashboard</a></li>
 			<li class="divider" data-text="main">Main</li>
