--- a/html/carrito.html
+++ b/html/carrito.html
@@ -11,9 +11,8 @@
 	<title>Abrigos</title>
 </head>
 <body>
-	<!-- SIDEBAR -->
 	<section id="sidebar">
-		<a href="#" class="brand"><i class='bx bxs-smile icon'></i> CampusShop</a>
+		<a href="../admin-site/index.html" class="brand"><i class='bx bxs-smile icon'></i> CampusShop</a>
 		<ul class="side-menu">
 			<li><a href="#" class="active"><i class='bx bxs-dashboard icon' ></i> Dashboard</a></li>
 			<li class="divider" data-text="main">Main</li>
@@ -23,12 +22,8 @@
 					<li><a href="abrigos.html">Abrigos</a></li>
 					<li><a href="#">Camisas</a></li>
 					<li><a href="#">Pantalones</a></li>
-					<!--<li><a href="#">Button</a></li>-->
 				</ul>
 			</li>
-			<!--<li><a href="#"><i class='bx bxs-chart icon' ></i> Charts</a></li>
-			<li><a href="#"><i class='bx bxs-widget icon' ></i> Widgets</a></li>
-			<li class="divider" data-text="table and forms">Table and forms</li>-->
 			<br><br><br>
 			<li><a href="carrito.html"><i class='bx bx-table icon' ></i> Carrito</a></li>
 			<li>
@@ -43,17 +38,11 @@
 			</li>
 		</ul>
 	</section>
-	<!-- SIDEBAR -->
-
-	<!-- NAVBAR -->
 	<section id="content">
-		<!-- NAVBAR -->
 		<nav>
 			<i class='bx bx-menu toggle-sidebar' ></i>
-			<form action="#">
-				
+			<form action="#">	
 			</form>
-			
 			<span class="divider"></span>
 			<div class="profile">
 				<img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixid=MnwxMjA3fDB8MHxzZWFyY2h8NHx8cGVvcGxlfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="">
@@ -64,13 +53,11 @@
 				</ul>
 			</div>
 		</nav>
-		<!-- NAVBAR -->
-
-		<!-- MAIN -->
         <h1 class="title">CARRITO</h1>
 		<main class="pagina-carrito">
             <div class="compras">
-                <section>foto</section>
+                <section class="productos">
+                    <img  class="ing"src="../images/gabardina.jpg"></section>
                 <section>nomvbre</section>
                 <section>cantidad</section>
                 <section>precio</section>
@@ -91,14 +78,10 @@
 					<div class="head">
 						<h3>Sales Report</h3>
 					</div>
-					<!-- conteido -->
 					<h1>Hola Mundo</h1>
 				</div>
-			
 			</div>
 		</main>
-		<!-- MAIN -->
 	</section>
-	<!-- NAVBAR -->
 </body>
 </html>
